config/gateway/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: system
  labels:
    app.kubernetes.io/name: maxicloud
    app.kubernetes.io/managed-by: kustomize
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: gateway
      app.kubernetes.io/name: maxicloud
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/component: gateway
        app.kubernetes.io/name: maxicloud
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: gateway
          command:
            - /manager
            - gateway
          image: maxicloud:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: github-private-key
              mountPath: /etc/maxicloud/github/private-key.pem
              subPath: private-key.pem
              readOnly: true
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - "ALL"
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 64Mi
      volumes:
        - name: github-private-key
          secret:
            secretName: maxicloud-gateway-secret
            items:
              - key: private-key.pem
                path: private-key.pem
      serviceAccountName: gateway
      terminationGracePeriodSeconds: 10
