config/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: system
  labels:
    app.kubernetes.io/name: maxicloud
    app.kubernetes.io/managed-by: kustomize
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/name: maxicloud
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
